fix text alignment on av pages

--- a/_sass/av.scss
+++ b/_sass/av.scss
@@ -37,6 +37,7 @@
     background: none;
     border: none;
     color: black;
+    text-align: left;
 }
 
 .permalink {
